manifests/overlays/kind/route.yaml
#
# Copyright (c) 2025 Red Hat Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#

apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: fulfillment-api
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway
    name: default
    sectionName: tls
  hostnames:
  - fulfillment-api.innabox.svc.cluster.local
  rules:
  - backendRefs:
    - name: fulfillment-api
      port: 8000
